Move variable name checking to 'check_varname' function

--- a/sys/config
+++ b/sys/config
@@ -1,4 +1,5 @@
 #%ifinclude sys/checkfile
+#%ifinclude sys/chkvname
 
 ########
 # Read configuration file
@@ -7,7 +8,6 @@
 # Return:
 #    0  no errors
 #    1  error
-#   none
 # Input:
 #   none
 # Output:
@@ -60,7 +60,6 @@ read_config ()
 # Return:
 #    0  no errors
 #    1  error
-#   none
 # Input:
 #   none
 # Output:
@@ -85,6 +84,7 @@ parse_config ()
 	    ( *'='* ) ;;		# Looks like assignment
 	    ( * ) err "not an assignment" ; _rc=1 ; break ;;
 	esac
+
 	# Check variable name
 	_var="${_line%%=*}"		# Get variable name
 	case "${_var}" in
@@ -92,14 +92,8 @@ parse_config ()
 		err "variable name with spaces" ; _rc=1 ; break ;;
 	    ( *[[:space:]] ) _var="${_var%%[[:space:]]*}"	# Trim trailing spaces
 	esac
-	(
-	    # Check variable name in POSIX locale
-	    LC_ALL=C
-	    case "${_var}" in
-		( [![:alpha:]_]* | [[:alpha:]_]*[![:alnum:]_]* )
-		    err "illegal variable name: '${_var}'" ; false ;;
-	    esac
-	) || { _rc=1 ; break ; }
+	check_varname "${_var}" || { _rc=1 ; break ; }
+
 	# Check value
 	_val="${_line#*=}"		# Get value
 	case "${_val}" in
@@ -117,6 +111,7 @@ parse_config ()
 		esac
 		;;
 	esac
+
 	# Finally assign value to variable
 	eval CFG_${_var}=\"\${_val}\"
     done < "${_cfg}"
