Changes to 'include' support
The functionality of '#%ifinclude' directive transferred to '#%include' directive.
This makes the ability to list '#%include' directives in arbitrary order
(there was problem of doubling includes in certain cases).
The functionality of '#%include' directive transferred to '#%uinclude'
(unconditional include) directive.

--- a/sys/config
+++ b/sys/config
@@ -1,5 +1,6 @@
-#%ifinclude sys/checkfile
-#%ifinclude sys/chkvname
+#%include sys/checkfile
+#%include sys/chkvname
+#%include sys/msg
 
 ########
 # Read configuration file
